Progress on rendering and loading a file

--- a/webview/tsconfig.json
+++ b/webview/tsconfig.json
@@ -1,6 +1,7 @@
 {
 	"compilerOptions": {
 		"module": "None",
+		"moduleResolution": "node",
 		"target": "ES6",
 		"lib": ["dom"],
 		"outDir": "dist",
