--- a/package.json
+++ b/package.json
@@ -30,19 +30,23 @@
     "run-in-browser": "vscode-test-web --browserType=chromium --extensionDevelopmentPath=. ."
   },
   "devDependencies": {
-    "@types/vscode": "^1.78.0",
+    "@jscad/core": "^2.6.6",
+    "@jscad/regl-renderer": "^2.6.6",
     "@types/mocha": "^10.0.1",
-    "eslint": "^8.39.0",
+    "@types/vscode": "^1.78.0",
+    "@types/webpack-env": "^1.18.0",
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
-    "mocha": "^10.2.0",
-    "typescript": "^5.0.4",
     "@vscode/test-web": "^0.0.43",
-    "ts-loader": "^9.4.2",
-    "webpack": "^5.81.0",
-    "webpack-cli": "^5.0.2",
-    "@types/webpack-env": "^1.18.0",
     "assert": "^2.0.0",
-    "process": "^0.11.10"
+    "eslint": "^8.39.0",
+    "mocha": "^10.2.0",
+    "most-gestures": "^0.4.1",
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10",
+    "ts-loader": "^9.4.2",
+    "typescript": "^5.0.4",
+    "webpack": "^5.81.0",
+    "webpack-cli": "^5.0.2"
   }
 }
