--- a/package.json
+++ b/package.json
@@ -48,23 +48,23 @@
     "run-in-browser": "vscode-test-web --browserType=chromium --extensionDevelopmentPath=."
   },
   "devDependencies": {
-    "@jscad/core": "^2.6.6",
-    "@jscad/regl-renderer": "^2.6.6",
-    "@types/mocha": "^10.0.1",
-    "@types/vscode": "^1.78.0",
-    "@types/webpack-env": "^1.18.0",
-    "@typescript-eslint/eslint-plugin": "^5.59.1",
-    "@typescript-eslint/parser": "^5.59.1",
-    "@vscode/test-web": "^0.0.43",
-    "assert": "^2.0.0",
-    "eslint": "^8.39.0",
+    "@jscad/core": "^2.6.7",
+    "@jscad/regl-renderer": "^2.6.7",
+    "@types/mocha": "^10.0.6",
+    "@types/vscode": "^1.85.0",
+    "@types/webpack-env": "^1.18.4",
+    "@typescript-eslint/eslint-plugin": "^6.15.0",
+    "@typescript-eslint/parser": "^6.15.0",
+    "@vscode/test-web": "^0.0.50",
+    "assert": "^2.1.0",
+    "eslint": "^8.56.0",
     "mocha": "^10.2.0",
     "most-gestures": "^0.4.1",
     "path-browserify": "^1.0.1",
     "process": "^0.11.10",
-    "ts-loader": "^9.4.2",
-    "typescript": "^5.0.4",
-    "webpack": "^5.81.0",
-    "webpack-cli": "^5.0.2"
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.3.3",
+    "webpack": "5.89",
+    "webpack-cli": "^5.1.4"
   }
 }
