--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "description": "Preview JSCAD Drawings",
   "icon": "logo.png",
-  "version": "0.4.2",
+  "version": "0.4.3",
   "engines": {
     "vscode": "^1.85.0"
   },
@@ -48,6 +48,9 @@
     "run-in-browser": "vscode-test-web --browserType=chromium --extensionDevelopmentPath=."
   },
   "devDependencies": {
+    "@babel/core": "^7.23.6",
+    "@babel/preset-env": "^7.23.6",
+    "@babel/preset-react": "^7.23.3",
     "@jscad/core": "^2.6.7",
     "@jscad/regl-renderer": "^2.6.7",
     "@types/mocha": "^10.0.6",
@@ -57,11 +60,22 @@
     "@typescript-eslint/parser": "^6.15.0",
     "@vscode/test-web": "^0.0.50",
     "assert": "^2.1.0",
+    "babel-loader": "^9.1.3",
+    "bootstrap": "^5.3.2",
+    "css-loader": "^6.8.1",
     "eslint": "^8.56.0",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.6.0",
     "mocha": "^10.2.0",
     "most-gestures": "^0.4.1",
+    "path": "^0.12.7",
     "path-browserify": "^1.0.1",
     "process": "^0.11.10",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.9.2",
+    "react-bootstrap-icons": "^1.10.3",
+    "react-dom": "^18.2.0",
+    "style-loader": "^3.3.3",
     "ts-loader": "^9.5.1",
     "typescript": "^5.3.3",
     "webpack": "5.89",
