--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,22 +1,52 @@
 {
-    "root": true,
-    "parser": "@typescript-eslint/parser",
-    "parserOptions": {
-        "ecmaVersion": 6,
-        "sourceType": "module"
-    },
-    "plugins": [
-        "@typescript-eslint"
-    ],
-    "rules": {
+  "root": true,
+  "parserOptions": {
+    "ecmaVersion": 6,
+    "sourceType": "module"
+  },
+  "env": {
+    "commonjs": true,
+    "worker": true
+  },
+  "plugins": ["prettier"],
+  "rules": {
+    "curly": "warn",
+    "eqeqeq": ["warn", "always", { "null": "ignore" }],
+    "no-throw-literal": "warn",
+    "semi": "off",
+    "prefer-const": "warn"
+  },
+  "ignorePatterns": ["**/*.d.ts"],
+  "extends": ["eslint:recommended", "plugin:prettier/recommended"],
+  "overrides": [
+    {
+      "files": ["**/*.ts"],
+      "parser": "@typescript-eslint/parser",
+      "rules": {
         "@typescript-eslint/naming-convention": "warn",
         "@typescript-eslint/semi": "warn",
+        "@typescript-eslint/no-unused-vars": [
+          "warn", // or "error"
+          {
+            "argsIgnorePattern": "^_",
+            "varsIgnorePattern": "^_",
+            "caughtErrorsIgnorePattern": "^_"
+          }
+        ],
         "curly": "warn",
-        "eqeqeq": ["warn", {"null": "ignore"}],
+        "eqeqeq": ["warn", "always", { "null": "ignore" }],
         "no-throw-literal": "warn",
-        "semi": "off"
-    },
-    "ignorePatterns": [
-        "**/*.d.ts"
-    ]
+        "semi": "off",
+        "prefer-const": "warn",
+        "prettier/prettier": "off"
+      },
+      "extends": [
+        "eslint:recommended",
+        "plugin:prettier/recommended",
+        "plugin:@typescript-eslint/eslint-recommended",
+        "plugin:@typescript-eslint/recommended"
+      ],
+      "plugins": ["@typescript-eslint", "prettier"]
+    }
+  ]
 }
