--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
   "license": "MIT",
   "description": "Preview JSCAD Drawings",
   "icon": "logo.png",
-  "version": "0.4.0",
+  "version": "0.5.0",
   "engines": {
     "vscode": "^1.78.0"
   },
   "categories": [
     "Other"
   ],
-  "activationEvents": [],
+  "activationEvents": [
+    "onWebviewPanel:jscad"
+  ],
   "browser": "./dist/web/extension.js",
   "contributes": {
     "commands": [
@@ -57,13 +59,26 @@
     "@typescript-eslint/parser": "^5.59.1",
     "@vscode/test-web": "^0.0.43",
     "assert": "^2.0.0",
+    "browser-process-hrtime": "^1.0.0",
+    "buffer": "^6.0.3",
+    "constants-browserify": "^1.0.0",
     "eslint": "^8.39.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "memfs": "^4.6.0",
     "mocha": "^10.2.0",
     "most-gestures": "^0.4.1",
+    "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
+    "prettier": "^3.1.1",
     "process": "^0.11.10",
+    "querystring-es3": "^0.2.1",
+    "setimmediate": "^1.0.5",
+    "stream-browserify": "^3.0.0",
     "ts-loader": "^9.4.2",
     "typescript": "^5.0.4",
+    "url": "^0.11.3",
+    "vm-browserify": "^1.1.2",
     "webpack": "^5.81.0",
     "webpack-cli": "^5.0.2"
   }
