--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,12 @@
 ﻿{
-    "presets": ["@babel/preset-env", "@babel/preset-react"]
+  "presets": [
+    [
+      "@babel/preset-env",
+      {
+        "targets": { "electron": "25" }
+      }
+    ],
+    "@babel/preset-react",
+    "@babel/preset-typescript"
+  ]
 }
