--- a/package.json
+++ b/package.json
@@ -53,18 +53,24 @@
     "@babel/core": "^7.23.6",
     "@babel/preset-env": "^7.23.6",
     "@babel/preset-react": "^7.23.3",
+    "@babel/preset-typescript": "^7.23.3",
     "@jscad/core": "^2.6.7",
     "@jscad/regl-renderer": "^2.6.7",
     "@types/mocha": "^10.0.6",
+    "@types/react": "^18.2.55",
+    "@types/react-dom": "^18.2.19",
     "@types/vscode": "^1.85.0",
     "@types/webpack-env": "^1.18.4",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
     "@vscode/test-web": "^0.0.50",
     "assert": "^2.1.0",
+    "babel-loader": "^9.1.3",
+    "bootstrap": "^5.3.2",
     "browser-process-hrtime": "^1.0.0",
     "buffer": "^6.0.3",
     "constants-browserify": "^1.0.0",
+    "css-loader": "^6.8.1",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
@@ -72,21 +78,15 @@
     "mocha": "^10.2.0",
     "most-gestures": "^0.4.1",
     "os-browserify": "^0.3.0",
-    "babel-loader": "^9.1.3",
-    "bootstrap": "^5.3.2",
-    "css-loader": "^6.8.1",
-    "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.6.0",
     "path-browserify": "^1.0.1",
     "prettier": "^3.1.1",
-    "process": "^0.11.10",
     "querystring-es3": "^0.2.1",
-    "setimmediate": "^1.0.5",
-    "stream-browserify": "^3.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.2",
     "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
+    "setimmediate": "^1.0.5",
+    "stream-browserify": "^3.0.0",
     "style-loader": "^3.3.3",
     "ts-loader": "^9.5.1",
     "typescript": "^5.3.3",
