--- a/webview/tsconfig.json
+++ b/webview/tsconfig.json
@@ -1,20 +1,19 @@
 {
-	"compilerOptions": {
-		"module": "None",
-		"moduleResolution": "node",
-		"target": "ES6",
-		"lib": ["dom"],
-		"outDir": "dist",
-		"sourceMap": true,
-		"rootDir": "src",
-		"strict": true,   /* enable all strict type-checking options */
-		/* Additional Checks */
-		// "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
-		// "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
-		// "noUnusedParameters": true,  /* Report errors on unused parameters. */
-		"typeRoots": [
-			"../node_modules/@types",
-			"../@types",
-		  ]
-	}
+  "compilerOptions": {
+    "module": "None",
+    "moduleResolution": "node",
+    "esModuleInterop": true,
+    "jsx": "react",
+    "target": "ES6",
+    "lib": ["dom"],
+    "outDir": "dist",
+    "sourceMap": true,
+    "rootDir": "src",
+    "strict": true /* enable all strict type-checking options */,
+    /* Additional Checks */
+    // "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
+    // "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
+    // "noUnusedParameters": true,  /* Report errors on unused parameters. */
+    "typeRoots": ["../node_modules/@types", "../@types"]
+  }
 }
